--- a/example.ipynb
+++ b/example.ipynb
@@ -33,13 +33,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# assistant = client.beta.assistants.create(\n",
-    "#    name=\"math Tutor\",\n",
-    "#    instructions=\"You are a personal math tutor. Answer question briefly, in a setence or less.\",\n",
-    "#    model=\"gpt-4-turbo-preview\",\n",
-    "# )\n",
-    "# print(assistant.id)\n",
-    "# assistant_id=assistant.id"
+    "assistant = client.beta.assistants.create(\n",
+    "   name=\"math Tutor\",\n",
+    "   instructions=\"You are a personal math tutor. Answer question briefly, in a setence or less.\",\n",
+    "   model=\"gpt-4-turbo-preview\",\n",
+    ")\n",
+    "print(assistant.id)\n",
+    "assistant_id=assistant.id"
    ]
   },
   {
@@ -56,15 +56,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# assistant = client.beta.assistants.update(\n",
-    "#    assistant_id,\n",
-    "#    instructions = \"파일 특성에 맞는 지시사항\",\n",
-    "#    name=\"HR Helper\",\n",
-    "#    tools=[{\"type\": \"file_search\"}],\n",
-    "#    tool_resources={\"file_search\": {\"vector_store_ids\": [vector_id]}},\n",
-    "#    model=\"gpt-4-turbo\"\n",
-    "# )\n",
-    "# print(assistant.id)\n"
+    "assistant = client.beta.assistants.update(\n",
+    "   assistant_id,\n",
+    "   instructions = \"파일 특성에 맞는 지시사항\",\n",
+    "   name=\"HR Helper\",\n",
+    "   tools=[{\"type\": \"file_search\"}],\n",
+    "   tool_resources={\"file_search\": {\"vector_store_ids\": [vector_id]}},\n",
+    "   model=\"gpt-4-turbo\"\n",
+    ")\n",
+    "print(assistant.id)\n"
    ]
   },
   {
@@ -81,14 +81,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# assistant = client.beta.assistants.update(\n",
-    "#    assistant_id,\n",
-    "#    instructions = \"어시스턴트의 함수를 활용해 날씨를 알려주는 봇\",\n",
-    "#    name=\"Weather Bot\",\n",
-    "#    tools=tools,\n",
-    "#    model=\"gpt-3.5-turbo\"\n",
-    "# )\n",
-    "# print(assistant.id)"
+    "assistant = client.beta.assistants.update(\n",
+    "   assistant_id,\n",
+    "   instructions = \"어시스턴트의 함수를 활용해 날씨를 알려주는 봇\",\n",
+    "   name=\"Weather Bot\",\n",
+    "   tools=tools,\n",
+    "   model=\"gpt-3.5-turbo\"\n",
+    ")\n",
+    "print(assistant.id)"
    ]
   }
  ],
