--- a/functoin.ipynb
+++ b/functoin.ipynb
@@ -27,9 +27,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# thread = client.beta.threads.create()\n",
-    "# print(thread.id)\n",
-    "# thread_id=thread.id"
+    "thread = client.beta.threads.create()\n",
+    "print(thread.id)\n",
+    "thread_id=thread.id"
    ]
   },
   {
