--- a/functoin.ipynb
+++ b/functoin.ipynb
@@ -98,7 +98,7 @@
     "message = client.beta.threads.messages.create(\n",
     "   thread_id = thread_id,\n",
     "   role=\"user\",\n",
-    "   content=\"USA 날씨 알려줘\"\n",
+    "   content=\"서울 날씨 알려줘\"\n",
     ")\n",
     "print(message)"
    ]
